--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,22 +1,22 @@
-edition = "2024"
+edition="2024"
 
-fn_single_line = true
-reorder_modules = true
-reorder_imports = true
-group_imports = "Preserve"
-fn_params_layout = "Compressed"
-use_small_heuristics = "Max"
-remove_nested_parens = true
-use_field_init_shorthand = true
-condense_wildcard_suffixes = true
+condense_wildcard_suffixes=true
+fn_params_layout="Compressed"
+fn_single_line=true
+group_imports="Preserve"
+remove_nested_parens=true
+reorder_imports=true
+reorder_modules=true
+use_field_init_shorthand=true
+use_small_heuristics="Max"
 
-max_width = 100
-array_width = 100
-chain_width = 100
-fn_call_width = 100
-struct_lit_width = 100
-attr_fn_like_width = 100
-struct_variant_width = 100
-single_line_if_else_max_width = 100
-single_line_let_else_max_width = 100
-short_array_element_width_threshold = 100
+array_width=100
+attr_fn_like_width=100
+chain_width=100
+fn_call_width=100
+max_width=100
+short_array_element_width_threshold=100
+single_line_if_else_max_width=100
+single_line_let_else_max_width=100
+struct_lit_width=100
+struct_variant_width=100
