--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,30 +24,30 @@
         repository="https://github.com/karolisr/treehouse"
         version="0.0.0"
 
-    [profile.dev] # --------------------------------------------------------------------------------
-        codegen-units=6          # 256      | Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
-        debug = true             # true     |
-        debug-assertions = false # true     | Why false? objc2-foundation-0.2.2 is freaking out on 2025-06-20 on macOS 26.0 Beta
-        incremental = true       # true     | Compile your binary in smaller steps.
-        lto = false              # false    | Enables link-time-optimizations. Use false for faster compile time.
-        opt-level = 1            # 1        | "s" prioritizes small binary size. Use 0 for faster compile time.
-        overflow-checks = true   # true     |
-        panic = "abort"          # "unwind" | Higher performance by disabling panic handlers.
-        rpath = false            # false    |
-        strip = false            # false    | Ensures debug symbols are removed.
+        [profile.dev] # --------------------------------------------------------------------------------
+            codegen-units = 6        # 256      | Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
+            debug = true             # true     |
+            debug-assertions = false # true     | Why false? objc2-foundation-0.2.2 is freaking out on 2025-06-20 on macOS 26.0 Beta
+            incremental = true       # true     | Compile your binary in smaller steps.
+            lto = false              # false    | Enables link-time-optimizations. Use false for faster compile time.
+            opt-level = 1            # 1        | "s" prioritizes small binary size. Use 0 for faster compile time.
+            overflow-checks = true   # true     |
+            panic = "abort"          # "unwind" | Higher performance by disabling panic handlers.
+            rpath = false            # false    |
+            strip = false            # false    | Ensures debug symbols are removed.
 
-    [profile.release] # ----------------------------------------------------------------------------
-        codegen-units = 1        # 16       | Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
-        debug = false            # false    |
-        debug-assertions = false # false    |
-        incremental = true       # false    | Compile your binary in smaller steps.
-        lto = true               # false    | Enables link-time-optimizations. Use false for faster compile time.
-        opt-level = 3            # 3        | "s" prioritizes small binary size. Use 0 for faster compile time.
-        overflow-checks = true   # false    |
-        panic = "abort"          # "unwind" | Higher performance by disabling panic handlers.
-        rpath = false            # false    |
-        strip = true             # "none"   | Ensures debug symbols are removed.
-    # ----------------------------------------------------------------------------------------------
+        [profile.release] # ----------------------------------------------------------------------------
+            codegen-units = 1        # 16       | Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
+            debug = false            # false    |
+            debug-assertions = false # false    |
+            incremental = false      # false    | Compile your binary in smaller steps.
+            lto = true               # false    | Enables link-time-optimizations. Use false for faster compile time.
+            opt-level = 3            # 3        | "s" prioritizes small binary size. Use 0 for faster compile time.
+            overflow-checks = true   # false    |
+            panic = "abort"          # "unwind" | Higher performance by disabling panic handlers.
+            rpath = false            # false    |
+            strip = true             # "none"   | Ensures debug symbols are removed.
+        # ----------------------------------------------------------------------------------------------
 
     [workspace.dependencies]
         num-traits="0.2.19"
@@ -56,7 +56,7 @@
         objc2-app-kit="0.3.1"
         objc2-foundation="0.3.1"
         rayon="1.10.0"
-        riced={path="riced"}
+        riced={path="riced", features=["crisp"]}
         roarsvg="0.5.0"
         tracing-subscriber="0.3.19"
         treeview={path="treeview"}
@@ -77,3 +77,22 @@
             default-features=false
             features=[]
             version="0.15.3"
+
+        [workspace.dependencies.tokio]
+            default-features=false
+            features=[
+                "fs",              # tokio::fs types.
+                "io-std",          # Stdout, Stdin and Stderr types.
+                "io-util",         # the IO based Ext traits.
+                "macros",          # #[tokio::main] and #[tokio::test] macros.
+                "net",             # tokio::net types such as TcpStream, UnixStream and UdpSocket, as well as (on Unix-like systems) AsyncFd and (on FreeBSD) PollAio.
+                "parking_lot",     # as a potential optimization, use the _parking_lot_ crate’s synchronization primitives internally. Also, this dependency is necessary to construct some of our primitives in a const context. MSRV may increase according to the _parking_lot_ release in use.
+                "process",         # tokio::process types.
+                "rt",              # tokio::spawn, the current-thread scheduler, and non-scheduler utilities.
+                "rt-multi-thread", # the heavier, multi-threaded, work-stealing scheduler.
+                "signal",          # all tokio::signal types.
+                "sync",            # all tokio::sync types.
+                "test-util",       # testing based infrastructure for the Tokio runtime.
+                "time",            # tokio::time types and allows the schedulers to enable the built in timer.
+            ]
+            version="1.45.1"
