--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -20,3 +20,5 @@ single_line_if_else_max_width=100
 single_line_let_else_max_width=100
 struct_lit_width=100
 struct_variant_width=100
+
+tab_spaces=4
