pane_grid::Axis as PgAxis

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
     authors.workspace=true
     categories.workspace=true
+    default-run="treehouse"
     edition.workspace=true
     license-file.workspace=true
     name="treehouse"
