--- a/riced/Cargo.toml
+++ b/riced/Cargo.toml
@@ -12,7 +12,6 @@
     convert_case="0.8.0"
 
 [dependencies]
-    muda={workspace=true}
     num-traits={workspace=true}
     numfmt={workspace=true}
 
@@ -50,3 +49,6 @@
 
 [features]
     crisp=["iced/crisp"]
+
+[lints]
+    workspace=true
