--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -44,3 +44,6 @@
 [target.'cfg(target_os = "windows")'.dependencies]
     muda={workspace=true}
     rfd={workspace=true}
+
+[lints]
+    workspace=true
