Removes reliance on unstable features.

--- a/treeview/Cargo.toml
+++ b/treeview/Cargo.toml
@@ -6,6 +6,7 @@
     name="treeview"
     readme.workspace=true
     repository.workspace=true
+    rust-version.workspace=true
     version.workspace=true
 
 [dependencies]
