--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@
         publish=false
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
+        rust-version="1.88"
         version="0.1.1"
 
     [workspace.dependencies]
