--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,6 +7,7 @@
     name="treehouse"
     readme.workspace=true
     repository.workspace=true
+    rust-version.workspace=true
     version.workspace=true
 
     # cargo-bundle (https://github.com/burtonageo/cargo-bundle) ----------------
