--- a/riced/Cargo.toml
+++ b/riced/Cargo.toml
@@ -6,6 +6,7 @@
     name="riced"
     readme.workspace=true
     repository.workspace=true
+    rust-version.workspace=true
     version.workspace=true
 
 [build-dependencies]
