--- a/treeview/Cargo.toml
+++ b/treeview/Cargo.toml
@@ -13,8 +13,11 @@
     dendros={workspace=true}
     rayon={workspace=true}
     riced={workspace=true}
-    roarsvg="0.5.0"
-    usvg-tree="0.36.0"
+    # roarsvg="0.5.0"
+    roarsvg={git="https://github.com/karolisr/roarsvg"}
+    # usvg-tree="0.36.0"
+    usvg={git="https://github.com/karolisr/resvg", branch="v36"}
+    usvg-tree={git="https://github.com/karolisr/resvg", branch="v36"}
 
 [lints]
     workspace=true
