--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,11 @@
         objc2="0.6.1"
         objc2-app-kit="0.3.1"
         objc2-foundation="0.3.1"
+        oxidize-pdf="0.1.3"
         rayon="1.10.0"
         riced={path="riced", features=["crisp"]}
         treeview={path="treeview"}
+        # ----------------------------------------------------------------------
         # tracing-subscriber="0.3.19"
         # ----------------------------------------------------------------------
         # roarsvg="0.5.0"
