--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,8 @@
         objc2="0.6.1"
         objc2-app-kit="0.3.1"
         objc2-foundation="0.3.1"
-        oxidize-pdf="0.1.3"
+        # oxidize-pdf="0.1.3"
+        oxidize-pdf={git="https://github.com/bzsanti/oxidizePdf"}
         rayon="1.10.0"
         riced={path="riced", features=["crisp"]}
         treeview={path="treeview"}
