--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -31,6 +31,7 @@
     dendros={workspace=true}
     riced={workspace=true}
     treeview={workspace=true}
+    # tracing-subscriber={workspace=true}
 
 [target.'cfg(target_os = "linux")'.dependencies]
     rfd={workspace=true, features=["gtk3"]}
