--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -46,6 +46,18 @@
 [target.'cfg(target_os = "windows")'.dependencies]
     muda={workspace=true}
     rfd={workspace=true}
+    windows={workspace=true, features=[
+        "Win32_Foundation",
+        "Win32_Security",
+        "Win32_System_Registry",
+        "Win32_UI_Shell",
+    ]}
+    winreg={workspace=true}
+
+[target.'cfg(target_os = "windows")'.build-dependencies]
+    winres="0.1"
+    image="0.24"
+    ico="0.3"
 
 [lints]
     workspace=true
