--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
         rust-version="1.88"
-        version="0.6.1"
+        version="0.6.2"
 
     [workspace.dependencies] # -------------------------------------------------
         num-traits="0.2.19"
@@ -31,6 +31,7 @@
         objc2="0.6.1"
         objc2-app-kit="0.3.1"
         objc2-foundation="0.3.1"
+        oxidize-pdf="1.1.6"
         rayon="1.10.0"
         riced={path="riced", features=["crisp"]}
         treeview={path="treeview"}
@@ -38,8 +39,6 @@
         winreg="0.55.0"
         # ----------------------------------------------------------------------
         # tracing-subscriber="0.3.19"
-        # oxidize-pdf="1.1.1"
-        oxidize-pdf={git="https://github.com/karolisr/oxidizePdf", branch="custom"}
         # ----------------------------------------------------------------------
 
         [workspace.dependencies.dendros]
