--- a/riced/Cargo.toml
+++ b/riced/Cargo.toml
@@ -21,14 +21,15 @@
         branch="custom"
         default-features=false
         features=[
-            "advanced", # advanced module
-            "canvas",   # "canvas" widget
-            "crisp",    # pixel snapping for crisp edges by default (can cause jitter!)
-            "lazy",     # lazy widgets
-            "sipper",   # support for the "sipper" library
-            "svg",      # "svg" widget
-            "tokio",    # "tokio" as the "executor::Default" on native platforms
-            "wgpu",     # "wgpu" GPU-accelerated renderer backend
+            "advanced",   # advanced module
+            "canvas",     # "canvas" widget
+            "crisp",      # pixel snapping for crisp edges by default (can cause jitter!)
+            "lazy",       # lazy widgets
+            "sipper",     # support for the "sipper" library
+            "svg",        # "svg" widget
+            "tokio",      # "tokio" as the "executor::Default" on native platforms
+            "web-colors", # enables broken "sRGB linear" blending to reproduce color management of the Web
+            "wgpu",       # "wgpu" GPU-accelerated renderer backend
             # "debug",    # a debug view in native platforms (press F12)
             # ----------------------------------------------------------------------------------------------
             # "auto-detect-theme",       # auto-detects light/dark mode for the built-in theme
@@ -44,7 +45,6 @@
             # "thread-pool",             # "thread-pool" futures executor as the "executor::Default" on native platforms
             # "tiny-skia",               # "tiny-skia" software renderer backend
             # "unconditional-rendering", # redraws on every runtime event, and not only when a widget requests it
-            # "web-colors",              # enables broken "sRGB linear" blending to reproduce color management of the Web
             # "webgl",                   # WebGL backend
         ]
         git="https://github.com/karolisr/iced.git"
