--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,18 +23,18 @@
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
         rust-version="1.88"
-        version="0.11.3"
+        version="0.12.0"
 
     [workspace.dependencies] # -------------------------------------------------
         num-traits="0.2.19"
         numfmt="1.2.0"
-        objc2="0.6.2"
-        objc2-app-kit="0.3.1"
-        objc2-foundation="0.3.1"
+        objc2="0.6.3"
+        objc2-app-kit="0.3.2"
+        objc2-foundation="0.3.2"
         rayon="1.11.0"
         riced={path="riced", features=["crisp"]}
         treeview={path="treeview"}
-        windows="0.62.1"
+        windows="0.62.2"
         winreg="0.55.0"
         # ----------------------------------------------------------------------
         # tracing-subscriber="0.3.19"
@@ -58,11 +58,11 @@
             version="0.15.4"
 
         [workspace.dependencies.oxidize-pdf]
-            branch="custom"
             default-features=false
             features=["compression", "performance", "rayon"]
-            git="https://github.com/karolisr/oxidizePdf"
-            # version="1.2.4"
+            version="1.4.0"
+            # branch="custom"
+            # git="https://github.com/karolisr/oxidizePdf"
 
         [workspace.dependencies.tokio]
             default-features=false
